# kastellan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  wrangler.jsonc
core/: Cargo.toml
core/src/: audit_mirror.rs  audit_tail.rs  classification_inference.rs  cli_audit.rs  handoff.rs  lib.rs  main.rs  main_tests.rs  memory.rs  registry_build.rs  sandbox_health.rs  tool_host.rs  worker_manifest.rs  worker_stderr.rs  workspace.rs
core/src/broker/: config.rs  kind.rs  mod.rs  spawn.rs
core/src/cassandra/: constitutional.rs  deterministic.rs  injection_guard.rs  mod.rs  review.rs  types.rs
core/src/channel/: auth.rs  bus.rs  ingest.rs  matrix.rs  mod.rs  pairing.rs  polled_driver.rs  respawn_alarm.rs  route.rs
core/src/cli_audit/: entities.rs  memory.rs  registry.rs  task.rs
core/src/egress/: audit.rs  cert_pins.rs  leak_provision.rs  mod.rs  net_worker.rs  persistent_net.rs  scratch_sweep.rs  spawn.rs
core/src/embed_broker/: config.rs  mod.rs  spawn.rs
core/src/entity_extraction/: batch_upsert.rs  gliner_relex.rs  mod.rs
core/src/install/: mod.rs  plan.rs  run.rs
core/src/main/: bootstrap.rs  bootstrap_tests.rs  matrix_boot.rs
core/src/memory/: embed.rs  embedder.rs  entity_link.rs  entity_reembed.rs  l0_seed.rs  l1_promote.rs  l1_reembed.rs  l3_approval.rs  l3_crystallise.rs  l3_invoke.rs  l3_surface.rs  l3py_approval.rs  l3py_crystallise.rs  l3py_invoke.rs  layers.rs  mod.rs  recall.rs  reembed.rs
core/src/observation/: capture.rs  mod.rs  replay.rs
core/src/prompt_assembly/: assemble.rs  mod.rs  now.rs  pg_builder.rs
core/src/recall_assembly/: mod.rs  pg_builder.rs
core/src/scheduler/: agent.rs  audit.rs  crash_recovery.rs  inner_loop.rs  inner_loop_audit.rs  l3_run.rs  mod.rs  plan_parser.rs  prompts.rs  runner.rs  tool_dispatch.rs
core/src/secrets/: admin.rs  collect.rs  mod.rs  substitute.rs  tests.rs  vault.rs
core/src/tool_host/: audit_sink.rs  egress_provision.rs  injection_placeholder.rs  lockdown_env.rs  post_process.rs  scratch.rs  secret_scrub.rs  spawn_invocation.rs  tests.rs  watchdog.rs
core/src/worker_lifecycle/: composite.rs  force_route.rs  idle_timeout.rs  manager.rs  mod.rs  persistent.rs  types.rs
core/tests/: agent_prompts_e2e.rs  audit_dispatch_e2e.rs  browser_driver_e2e.rs  browser_driver_firecracker_e2e.rs  channel_bus_e2e.rs  channel_bus_pg_e2e.rs  cli_ask_e2e.rs  cli_cancel_audit_e2e.rs  cli_dispatcher_bad_args_e2e.rs  cli_entities_e2e.rs  cli_entities_kinds_e2e.rs  cli_memory_l1_e2e.rs  cli_memory_l3_e2e.rs  cli_memory_l3_run_daemon_e2e.rs  cli_memory_l3_run_e2e.rs  cli_memory_l3py_run_daemon_e2e.rs  cli_relations_e2e.rs  cli_relations_show_e2e.rs  cli_submit_audit_e2e.rs  cli_tools_allowlist_e2e.rs  egress_force_routing_e2e.rs  egress_leak_scan_e2e.rs  egress_proxy_e2e.rs  embed_broker_egress_e2e.rs  embed_broker_spawn_e2e.rs  embedding_recall_e2e.rs  entity_extraction_e2e.rs  entity_forward_embed_e2e.rs  entity_reembed_e2e.rs  firecracker_egress_channel_e2e.rs  firecracker_vmm_confinement_e2e.rs  gliner_relex_e2e.rs  handoff_dispatch_e2e.rs  injection_guard_e2e.rs  injection_guard_fixtures.rs  install_e2e.rs  kv_demo_firecracker_persistent_e2e.rs  kv_demo_persistent_e2e.rs  l3_surface_e2e.rs  lifecycle_container_routing_e2e.rs  (+48 more)
db/: Cargo.toml  README.md
db/migrations/: 0001_init.sql  0002_runtime_role.sql  0003_audit_log_notify.sql  0004_secrets_aad_nonempty.sql  0005_tasks_scheduler.sql  0006_agent_prompts.sql  0007_memory_entities.sql  0008_deleted_memories_audit.sql  0009_tool_allowlists.sql  0010_audit_log_payload_gin.sql  0011_agent_prompts_composite_pk.sql  0012_tasks_state_refused.sql  0013_memories_layer.sql  0014_deleted_memories_layer.sql  0015_entity_kinds_and_quarantine.sql  0016_entity_kinds_revoke_runtime_writes.sql  0017_relation_kinds.sql  0018_pairings.sql  0019_embedding_dim_256.sql  0020_audit_memory_delete_search_path.sql  0021_tool_allowlists_domain_entries.sql
db/src/: agent_prompts.rs  audit.rs  conn.rs  entities.rs  entity_embedding.rs  entity_kinds.rs  entity_name.rs  graph.rs  lib.rs  memories.rs  pairings.rs  pool.rs  probe.rs  relation_kinds.rs  secrets.rs  tasks.rs  tests.rs  tool_allowlists.rs
db/tests/: pairings_e2e.rs  postgres_e2e.rs
leak-scan/: Cargo.toml
leak-scan/src/: fingerprint.rs  lib.rs  matcher.rs  redact.rs  wire.rs
llm-router/: Cargo.toml
llm-router/src/: backend.rs  config.rs  embeddings.rs  error.rs  lib.rs  messages.rs  policy.rs
llm-router/tests/: embedding_backend_e2e.rs  local_backend_e2e.rs
net-classify/: Cargo.toml
net-classify/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: client.rs  lib.rs  server.rs
sandbox/: Cargo.toml
sandbox/src/: guest_kernel_pin.rs  lib.rs  linux_bwrap.rs  linux_cgroup.rs  linux_firecracker.rs  macos_container.rs  macos_seatbelt.rs  pid.rs
sandbox/tests/: linux_force_routing.rs  linux_smoke.rs  macos_container_smoke.rs  macos_smoke.rs  seatbelt_uds_probe.rs
supervisor/: Cargo.toml
supervisor/src/: bounded_command.rs  launchd_agents.rs  lib.rs  specs.rs  systemd_user.rs
supervisor/tests/: launchd_agents_smoke.rs  systemd_user_smoke.rs  target_smoke.rs
tests-common/: Cargo.toml
tests-common/src/: allowlist.rs  audit.rs  binaries.rs  daemon.rs  embedding.rs  env.rs  guards.rs  lib.rs  microvm.rs  pg.rs  provisioning.rs  sandbox.rs  serial.rs  skip.rs  temp.rs  tls_origin.rs  wait.rs  watchdog.rs
workers/browser-driver/: .dockerignore  README.md  pyproject.toml
workers/egress-proxy/: Cargo.toml
workers/embed-broker/: Cargo.toml
workers/gliner-relex/: Containerfile  README.md  pyproject.toml
workers/kv-demo/: Cargo.toml
workers/mail/: Cargo.toml
workers/matrix/: Cargo.toml
workers/matrix-wire/: Cargo.toml
workers/microvm-init/: Cargo.toml
workers/microvm-run/: Cargo.toml
workers/net-demo/: Cargo.toml
workers/prelude/: Cargo.toml
workers/python-exec/: Cargo.toml  Containerfile
workers/search-broker/: Cargo.toml
workers/shell-exec/: Cargo.toml
workers/web-common/: Cargo.toml
workers/web-fetch/: Cargo.toml
workers/web-research/: Cargo.toml
workers/web-search/: Cargo.toml
(+591 files in other folders)
