[workspace]
resolver = "2"
members = [
    "core",
    "sandbox",
    "supervisor",
    "protocol",
    "workers/prelude",
    "workers/shell-exec",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-only"
authors = ["Horst Herb <horst.herb@gmail.com>"]
repository = "https://github.com/hherb/hhagent"
readme = "README.md"

[workspace.dependencies]
# Async runtime + utils
tokio       = { version = "1", features = ["full"] }
futures     = "0.3"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Errors / logging
anyhow      = "1"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time        = { version = "0.3", features = ["serde", "macros"] }

# Linux defence-in-depth (worker-side, applied from inside the worker process,
# layered on top of bwrap from the parent side). Both AGPL-compatible:
#   landlock     — MIT OR Apache-2.0
#   seccompiler  — Apache-2.0 OR BSD-3-Clause
landlock    = "0.4"
seccompiler = "0.5"

# POSIX bindings for the wall-clock watchdog: we send SIGKILL by PID from a
# helper thread when a worker outlives its budget. MIT OR Apache-2.0.
libc        = "0.2"

# Profile tweaks
[profile.release]
lto         = "thin"
codegen-units = 1
strip       = "symbols"
panic       = "abort"
