[workspace]
resolver = "2"
members = [
    "core",
    "db",
    "sandbox",
    "supervisor",
    "protocol",
    "workers/prelude",
    "workers/shell-exec",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-only"
authors = ["Horst Herb <horst.herb@gmail.com>"]
repository = "https://github.com/hherb/hhagent"
readme = "README.md"

[workspace.dependencies]
# Async runtime + utils
tokio       = { version = "1", features = ["full"] }
futures     = "0.3"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Errors / logging
anyhow      = "1"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time        = { version = "0.3", features = ["serde", "macros"] }

# Linux defence-in-depth (worker-side, applied from inside the worker process,
# layered on top of bwrap from the parent side). Both AGPL-compatible:
#   landlock     — MIT OR Apache-2.0
#   seccompiler  — Apache-2.0 OR BSD-3-Clause
landlock    = "0.4"
seccompiler = "0.5"

# POSIX bindings for the wall-clock watchdog: we send SIGKILL by PID from a
# helper thread when a worker outlives its budget. MIT OR Apache-2.0.
libc        = "0.2"

# Postgres driver + migration runner. License: MIT OR Apache-2.0.
#
# Feature notes:
#   - default-features=false drops the runtime-tokio-rustls bundle. We
#     speak Postgres over a Unix-domain socket only (peer auth, see
#     hhagent-db's module doc), so a TLS implementation would be dead
#     weight and a license-audit hazard.
#   - "runtime-tokio" wires sqlx to the same Tokio reactor the rest of
#     the workspace uses.
#   - "postgres" enables the PG driver.
#   - "migrate" enables the `sqlx::migrate` *module* (the `Migrator`
#     type used to hold the embedded migration set).
#   - "macros" re-exports the `sqlx::migrate!()` proc-macro itself —
#     the one that scans `./migrations/*.sql` at compile time and
#     bakes them into a `Migrator` constant. Without this the
#     `migrate!` invocation in hhagent-db won't resolve. We do NOT
#     opt in to the `query!()` / `query_as!()` compile-time-checked
#     query macros (they require DATABASE_URL at build time, which
#     would tie CI to a running cluster).
#   - "json" pulls in `JsonValue` <-> `serde_json::Value` codec for the
#     JSONB columns on `audit_log`, `tasks`, `entities`, `relations`.
#   - "time" wires sqlx's `TIMESTAMPTZ` codec to the same `time` crate
#     types used elsewhere in the workspace (`time::OffsetDateTime`).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "json",
    "time",
] }

# SHA-256 fingerprint of audit-log payloads that exceed the
# in-row size budget (see `db::audit::truncate_payload`). MIT OR
# Apache-2.0 — AGPL-compatible. Pure-Rust, no system deps.
sha2 = "0.10"

# Profile tweaks
[profile.release]
lto         = "thin"
codegen-units = 1
strip       = "symbols"
panic       = "abort"
