[workspace]
resolver = "2"
members = [
    "core",
    "db",
    "leak-scan",
    "llm-router",
    "sandbox",
    "supervisor",
    "protocol",
    "tests-common",
    "workers/prelude",
    "workers/python-exec",
    "workers/shell-exec",
    "workers/web-common",
    "workers/web-fetch",
    "workers/web-search",
    "workers/egress-proxy",
    "workers/matrix-wire",
    "workers/matrix",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-only"
authors = ["Horst Herb <horst.herb@gmail.com>"]
repository = "https://github.com/hherb/kastellan"
readme = "README.md"

[workspace.dependencies]
# Async runtime + utils
tokio       = { version = "1", features = ["full"] }
futures     = "0.3"
async-trait = "0.1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# TOML parser for observation-phase fixture meta.toml files. Pure-Rust,
# MIT/Apache-2.0 — AGPL-compatible.
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Errors / logging
anyhow      = "1"
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time        = { version = "0.3", features = ["serde", "macros"] }

# Linux defence-in-depth (worker-side, applied from inside the worker process,
# layered on top of bwrap from the parent side). Both AGPL-compatible:
#   landlock     — MIT OR Apache-2.0
#   seccompiler  — Apache-2.0 OR BSD-3-Clause
landlock    = "0.4"
seccompiler = "0.5"

# POSIX bindings for the wall-clock watchdog: we send SIGKILL by PID from a
# helper thread when a worker outlives its budget. MIT OR Apache-2.0.
libc        = "0.2"

# Postgres driver + migration runner. License: MIT OR Apache-2.0.
#
# Feature notes:
#   - default-features=false drops the runtime-tokio-rustls bundle. We
#     speak Postgres over a Unix-domain socket only (peer auth, see
#     kastellan-db's module doc), so a TLS implementation would be dead
#     weight and a license-audit hazard.
#   - "runtime-tokio" wires sqlx to the same Tokio reactor the rest of
#     the workspace uses.
#   - "postgres" enables the PG driver.
#   - "migrate" enables the `sqlx::migrate` *module* (the `Migrator`
#     type used to hold the embedded migration set).
#   - "macros" re-exports the `sqlx::migrate!()` proc-macro itself —
#     the one that scans `./migrations/*.sql` at compile time and
#     bakes them into a `Migrator` constant. Without this the
#     `migrate!` invocation in kastellan-db won't resolve. We do NOT
#     opt in to the `query!()` / `query_as!()` compile-time-checked
#     query macros (they require DATABASE_URL at build time, which
#     would tie CI to a running cluster).
#   - "json" pulls in `JsonValue` <-> `serde_json::Value` codec for the
#     JSONB columns on `audit_log`, `tasks`, `entities`, `relations`.
#   - "time" wires sqlx's `TIMESTAMPTZ` codec to the same `time` crate
#     types used elsewhere in the workspace (`time::OffsetDateTime`).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "json",
    "time",
] }

# SHA-256 fingerprint of audit-log payloads that exceed the
# in-row size budget (see `db::audit::truncate_payload`). MIT OR
# Apache-2.0 — AGPL-compatible. Pure-Rust, no system deps.
sha2 = "0.10"

# AES-256-GCM authenticated encryption for the `secrets` table
# (see `db::secrets`). Pure-Rust RustCrypto implementation; the
# default features pull in `getrandom` (which re-exports `OsRng`
# via the `aead` crate) and the `aes` instruction-set backend.
# The `zeroize` feature wires the key+cipher's internal state to
# wipe on drop so a panic-unwind cannot leave material in stack
# frames. Apache-2.0 OR MIT — AGPL-compatible.
aes-gcm = { version = "0.10", features = ["zeroize"] }

# Wipe sensitive buffers on drop. Used directly for plaintext
# (`Zeroizing<Vec<u8>>` is the public secret-getter return type) and
# transitively by `aes-gcm` for key/cipher state. Apache-2.0 OR MIT.
zeroize = { version = "1", features = ["zeroize_derive"] }

# Cryptographic RNG used by Vault::materialize to generate fresh
# secret:// refs via OsRng. MIT OR Apache-2.0 — AGPL-compatible.
rand = { version = "0.8", features = ["std", "std_rng"] }

# `keyring` (cross-platform OS keyring shim) is NOT declared as a
# workspace dep because feature selection is per-target. See the
# per-target stanzas at the bottom of `db/Cargo.toml` for the
# Linux (`async-secret-service` + `tokio` + `crypto-rust`) vs. macOS
# (`apple-native`) split. License: MIT OR Apache-2.0 across the
# crate and all backend deps.

# HTTP client for the `kastellan-llm-router` crate (sole egress for
# model calls). License: MIT OR Apache-2.0 — AGPL-compatible.
#
# Feature notes:
#   - default-features=false drops the openssl-sys default and the
#     blocking client. We do not link against system OpenSSL; rustls
#     keeps the build hermetic and is in line with the rest of the
#     workspace (sqlx UDS-only, no native-tls).
#   - "rustls-tls" turns on the pure-Rust TLS stack so HTTPS calls
#     work (Phase-5 frontier backend) without dragging in
#     `openssl-sys` and a `libssl-dev` build-time dependency.
#   - "json" enables `RequestBuilder::json` / `Response::json` —
#     the OpenAI-compatible request/response shape is JSON.
#   - "stream" is *not* enabled — Phase-0 stub returns a single
#     completion; SSE streaming is a Phase-1+ concern.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# URL parsing used by the web-fetch worker's allowlist gate.
# MIT OR Apache-2.0 — AGPL-compatible.
url = "2"

# PDF text extraction for the web-fetch worker. MIT — AGPL-compatible.
pdf-extract = "0.10"

# HTML readability extraction (Mozilla Readability port) for the web-fetch
# worker. Imported as `readable_html` for call-site clarity; underlying crate
# is `dom_smoothie`. MIT — AGPL-compatible.
readable_html = { package = "dom_smoothie", version = "0.18" }

# Profile tweaks
[profile.release]
lto         = "thin"
codegen-units = 1
strip       = "symbols"
panic       = "abort"
