[package]
name        = "hhagent-core"
description = "Agent core: scheduler, memory orchestration, policy gate, LLM router, IPC, audit log."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "hhagent"
path = "src/main.rs"

# Operator CLI: today only `hhagent-cli audit tail` for streaming the
# JSONL mirror under ~/.local/state/hhagent/. Needs no Postgres
# connection so it works against a daemon that has crashed (the JSONL
# files are the durable replica written by the mirror task).
[[bin]]
name = "hhagent-cli"
path = "src/bin/hhagent-cli.rs"

[dependencies]
hhagent-sandbox    = { path = "../sandbox" }
hhagent-supervisor = { path = "../supervisor" }
hhagent-protocol   = { path = "../protocol" }
hhagent-db         = { path = "../db" }
hhagent-llm-router = { path = "../llm-router" }

tokio              = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
time               = { workspace = true }
libc               = { workspace = true }
sqlx               = { workspace = true }

# Deterministic SHA-256-seeded embedding helper used by the
# memory_recall_e2e integration test. Pure-Rust, AGPL-compatible.
# Production embeddings come from the (future) embedding worker;
# keeping this confined to dev-dependencies makes the limited scope
# explicit.
[dev-dependencies]
sha2 = { workspace = true }
