[package]
name        = "kastellan-core"
description = "Agent core: scheduler, memory orchestration, policy gate, LLM router, IPC, audit log."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "kastellan"
path = "src/main.rs"

# Operator CLI: today only `kastellan-cli audit tail` for streaming the
# JSONL mirror under ~/.local/state/kastellan/. Needs no Postgres
# connection so it works against a daemon that has crashed (the JSONL
# files are the durable replica written by the mirror task).
[[bin]]
name = "kastellan-cli"
path = "src/bin/kastellan-cli/main.rs"

[dependencies]
kastellan-sandbox    = { path = "../sandbox", version = "0.1.0" }
kastellan-supervisor = { path = "../supervisor", version = "0.1.0" }
kastellan-protocol   = { path = "../protocol", version = "0.1.0" }
kastellan-db         = { path = "../db", version = "0.1.0" }
kastellan-llm-router = { path = "../llm-router", version = "0.1.0" }
kastellan-matrix-wire = { path = "../workers/matrix-wire", version = "0.1.0" }

tokio              = { workspace = true }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
time               = { workspace = true }
libc               = { workspace = true }
sha2               = { workspace = true }
sqlx               = { workspace = true }
zeroize            = { workspace = true }
rand               = { workspace = true }
futures            = { workspace = true }
toml               = { workspace = true }
url                = { workspace = true }

[dev-dependencies]
# Shared test fixtures hoisted in issue #15: per-test Postgres cluster
# bring-up, RAII guards, skip helpers, sandbox factory, binary discovery,
# deterministic embedding seed, macOS launchd serial lock. dev-only.
kastellan-tests-common = { path = "../tests-common" }

# Slice #3a real-MITM e2e: the #[ignore] real_mitm_fetch_through_sidecar test
# drives the worker's HTTP transport (make_get_inner) trusting only the
# sidecar's per-instance CA. dev-only.
kastellan-worker-web-common = { path = "../workers/web-common", version = "0.1.0" }

# Integration-test crates do not inherit the library's normal [dependencies];
# the e2e tests name `url::Url` directly (web_search_e2e.rs), so url must be a
# dev-dependency too.
url = { workspace = true }

tempfile = "3"
