[package]
name        = "kastellan-leak-scan"
description = "Pure credential-leak scanner: secret-value fingerprinting + streaming rolling-window matcher, shared by the egress proxy (detect) and core (provision)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../README.md"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
