[package]
name        = "kastellan-net-classify"
description = "Pure IP-range classifier: the SSRF / DNS-rebinding deny predicate shared by the egress proxy (connect-time containment) and core (resolve-time endpoint sanity checks)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../README.md"

[dependencies]
