[package]
name        = "hhagent-sandbox"
description = "Cross-platform sandbox abstraction: bwrap+Landlock+seccomp on Linux, sandbox-exec (Seatbelt) on macOS."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
