[package]
name        = "hhagent-sandbox"
description = "Cross-platform sandbox abstraction: bwrap+Landlock+seccomp on Linux, sandbox-exec (Seatbelt) on macOS."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

# Test fixture: standalone TcpStream::connect probe used by macos_smoke's
# network-deny test. Built into target/debug/net_probe by `cargo build`.
[[bin]]
name = "net_probe"
path = "tests/fixtures/net_probe.rs"
test = false
doc = false

# Test fixture: memory-allocator probe used by linux_smoke's cgroup
# OOM-kill test. Built into target/debug/mem_burner by `cargo build`.
[[bin]]
name = "mem_burner"
path = "tests/fixtures/mem_burner.rs"
test = false
doc = false
