[package]
name        = "hhagent-supervisor"
description = "Service-supervisor abstraction: systemd --user (Linux) and launchd LaunchAgents (macOS)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

# macOS-only: the LaunchAgents backend needs `getuid()` to build the
# `gui/<uid>` domain target for `launchctl bootstrap` / `bootout`.
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
