[package]
name        = "kastellan-tests-common"
description = "Shared test fixtures: per-test Postgres bring-up, RAII guards, skip helpers, sandbox factory, mock LLM. Dev-dependency only."
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

# This crate exists to deduplicate test scaffolding that was previously
# byte-copied across eight integration tests (issue #15). It is consumed
# from `[dev-dependencies]` only — never linked into a runtime binary.
#
# Dependency rationale: every helper here reaches across two-or-more
# runtime crates (e.g. `bring_up_pg_cluster` glues `kastellan-db`'s initdb
# argv builder to `kastellan-supervisor`'s `Supervisor` trait), so the
# crate itself depends on the runtime crates whose surfaces it composes.
# This is safe because `[dev-dependencies]` are excluded from the
# downstream `cargo build` graph; no production binary picks up a
# dependency on `kastellan-tests-common`.
[dependencies]
kastellan-db         = { path = "../db" }
kastellan-supervisor = { path = "../supervisor" }
kastellan-sandbox    = { path = "../sandbox" }
# `daemon.rs`'s inert mock-LLM listener + the async bring-up helpers run on the
# same Tokio reactor the tests use. Workspace pin (full features), dev-only.
tokio              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
sqlx               = { workspace = true }
# Reentrant launchd serial lock (macOS, issue #130). std::sync::ReentrantLock
# is still unstable on 1.96, so we use parking_lot's stable ReentrantMutex.
# Already present transitively in the build graph (MIT/Apache-2.0,
# AGPL-compatible); only referenced on macOS in `serial.rs`.
parking_lot        = "0.12"
