[package]
name        = "kastellan-tests-common"
description = "Shared test fixtures: per-test Postgres bring-up, RAII guards, skip helpers, sandbox factory, mock LLM. Dev-dependency only."
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme.workspace       = true

# This crate exists to deduplicate test scaffolding that was previously
# byte-copied across eight integration tests (issue #15). It is consumed
# from `[dev-dependencies]` only — never linked into a runtime binary.
#
# Dependency rationale: every helper here reaches across two-or-more
# runtime crates (e.g. `bring_up_pg_cluster` glues `kastellan-db`'s initdb
# argv builder to `kastellan-supervisor`'s `Supervisor` trait), so the
# crate itself depends on the runtime crates whose surfaces it composes.
# This is safe because `[dev-dependencies]` are excluded from the
# downstream `cargo build` graph; no production binary picks up a
# dependency on `kastellan-tests-common`.
[dependencies]
kastellan-db         = { path = "../db" }
kastellan-supervisor = { path = "../supervisor" }
kastellan-sandbox    = { path = "../sandbox" }
# `audit::NoopAuditSink` implements `kastellan_core::tool_host::AuditSink` so the
# dispatch-based worker e2e tests need no Postgres. `kastellan-core` depends on
# this crate via `[dev-dependencies]`, so the resulting cycle is dev-only and
# Cargo permits it (the normal build graph stays acyclic: tests-common → core).
kastellan-core       = { path = "../core" }
# Needed for the `#[async_trait]` AuditSink impl in `audit.rs`.
async-trait          = { workspace = true }
# `daemon.rs`'s inert mock-LLM listener + the async bring-up helpers run on the
# same Tokio reactor the tests use. Workspace pin (full features), dev-only.
tokio              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
sqlx               = { workspace = true }
# Reentrant launchd serial lock (macOS, issue #130). std::sync::ReentrantLock
# is still unstable on 1.96, so we use parking_lot's stable ReentrantMutex.
# Already present transitively in the build graph (MIT/Apache-2.0,
# AGPL-compatible); only referenced on macOS in `serial.rs`.
parking_lot        = "0.12"
# Shared loopback TLS-origin harness (`tls_origin.rs`, issue #390): the same
# rcgen self-signed cert + rustls server the net-demo egress e2e tests spawn.
# Pins mirror `core`'s (unified `ring` backend) so the workspace lock stays
# single-versioned. All AGPL-compatible (Apache-2.0 / MIT / ISC). Dev-only.
rcgen            = { version = "0.13", default-features = false, features = ["pem", "ring"] }
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls           = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = { version = "1",    features = ["std"] }
