[project]
name = "kastellan-worker-browser-driver"
version = "0.0.1"
description = "Headless-browser render worker for kastellan (Playwright; JSON-RPC stdio)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "kastellan contributors" }]
dependencies = [
    "playwright>=1.44",      # Apache-2.0; bundled browsers staged by install, not vendored
    "readability-lxml>=0.8", # Apache-2.0 readability extraction
    "lxml>=5",               # BSD
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[project.scripts]
# uv generates .venv/bin/kastellan-worker-browser-driver == python -m kastellan_worker_browser_driver
kastellan-worker-browser-driver = "kastellan_worker_browser_driver.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kastellan_worker_browser_driver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
