[package]
name        = "kastellan-worker-egress-proxy"
description = "Per-worker egress proxy: host-allowlist + SSRF/IP-pinning boundary + TLS interception over a UDS."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-egress-proxy"
path = "src/main.rs"

[dependencies]
kastellan-worker-prelude    = { path = "../prelude", version = "0.1.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.1.0" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tokio        = { version = "1",    features = ["rt", "net", "io-util", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls       = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = { version = "1", features = ["std"] }
rcgen        = { version = "0.13", default-features = false, features = ["pem", "ring"] }
