[package]
name        = "kastellan-worker-egress-proxy"
description = "Per-worker egress proxy: host-allowlist + SSRF/IP-pinning boundary + TLS interception over a UDS."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme      = "../../README.md"

[[bin]]
name = "kastellan-worker-egress-proxy"
path = "src/main.rs"

[dependencies]
kastellan-worker-prelude    = { path = "../prelude", version = "0.2.0" }
kastellan-worker-web-common = { path = "../web-common", version = "0.2.0" }
kastellan-leak-scan = { path = "../../leak-scan", version = "0.2.0" }
kastellan-net-classify = { path = "../../net-classify", version = "0.2.0" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tokio        = { version = "1",    features = ["rt", "net", "io-util", "time", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls       = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-pki-types = { version = "1", features = ["std"] }
rcgen        = { version = "0.13", default-features = false, features = ["pem", "ring"] }
webpki-roots = "1"
# POSIX recv(MSG_PEEK) for the non-consuming first-tunnel-byte peek (std's
# UnixStream::peek is still unstable). MIT OR Apache-2.0.
libc         = "0.2"
# SPKI extraction for TLS cert pinning (slice #4). RustCrypto; its ASN.1 base
# (der/spki/const-oid) is already in the workspace lock. Apache-2.0 OR MIT.
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
sha2      = "0.10"
base64    = "0.22"
